Continue to specify license.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ name = cinematoscope
 description = Add a short description here!
 author = Luke Petrolekas
 author_email = reclarion@gmail.com
-license = MIT
+license = GNU Affero License
 license_files = LICENSE.txt
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
